# cape

./: .gitignore  .gitmodules  README.md  input.txt  pyproject.toml  readme.md  requirements.txt  setup.py
CAPE_GUI/: .gitignore  Cape_GUI.py  Cape_UI.py  Cape_UI_Modified.py  Test.py
CAPE_GUI/tkintertable/: Plot.py  TableModels.py  Tables.py
capexplain/: __init__.py  cape.py  cape_miner.py  cape_xplain.py  utils.py
capexplain/cl/: cfgoption.py  command.py  instrumentation.py
capexplain/database/: dbaccess.py
capexplain/db/: dbaccess.py
capexplain/dev/: fill_publication.py  find_user_questions.py
capexplain/explain/: explanation.py  pattern_retrieval.py  tuple_retrieval.py
capexplain/explanation_model/: explanation_model.py
capexplain/gui/: Cape_GUI.py  DBinfo.py  Exp_Frame.py  Pattern_Frame.py  Plotting.py  User_Query_Frame.py  new_exp_template  pattern_template  some_example_queries.sql  test.py
capexplain/pattern_miner/: PatternMiner.py
capexplain/pattern_model/: LocalRegressionPattern.py
capexplain/similarity/: category_embedding.py  category_similarity_matrix.py  category_similarity_naive.py
testdb/: capetest.sql
