[tool.poetry]
name = "capexplain"
version = "0.5.0"
description = "Cape - a system for explaining outliers in aggregation results through counterbalancing."
authors = ["Boris Glavic <lordpretzel@gmail.com>"]
license = "Apache2"

[tool.poetry.dependencies]
python = "^3.8"
certifi = "^2018.4.16"
chardet = "^3.0.4"
colorful = "^0.4.1"
geopy = "*"
idna = "^2.7"
matplotlib = "3.0.2"
numpy = "^1.24"
pandas = "0.23.4"
patsy = "^0.5.0"
pkginfo = "^1.4.2"
psycopg2-binary = "*"
python-dateutil = "^2.7.3"
pytz = "^2018.5"
requests = "^2.19.1"
requests-toolbelt = "^0.8.0"
scikit-learn = "^0.19.2"
scipy = ">1.2.1"
six = "^1.11.0"
SQLAlchemy = "1.2.10"
statsmodels = "^0.9.0"
tqdm = "^4.23.4"
urllib3 = ">=1.23,<1.25"
#pandastable = ">=0.12"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
capexplain = 'capexplain.cape:main'
capegui = 'capexplain.gui.Cape_GUI:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
